update java virtual thread